@@ -1242,6 +1242,9 @@ div[class*=' pa-'] {
     align-self: flex-start; }
   .pp-pricing-table .pp-pricing-table-price-duration {
     align-self: flex-end; }
+  .pp-pricing-table .pp-pricing-table-price-original .pp-pricing-table-price-prefix {
+    font-size: 1em;
+    margin: 0; }
   .pp-pricing-table-price-duration-wrap .pp-pricing-table-price {
     flex-wrap: wrap; }
   .pp-pricing-table-price-duration-wrap .pp-pricing-table-price-duration {
